--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AGHERRABI</title>
-        <link rel="icon" href="/icon-page1.png" />
+        <link rel="icon" href="icon-page1.png" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
@@ -26,7 +26,7 @@
                 </div>
                 <nav class="d-flex px-lg-5 py-lg-2 fixed-top align-items-centre justify-content-center justify-content-lg-between">
                     <a class="navbar-brand" href="saidPrtfolio.html">
-                        <img class="logo img-fluid" src="/logo.png" alt="logo">
+                        <img class="logo img-fluid" src="logo.png" alt="logo">
                     </a>
                     <ul class="nav-list text-center p-0">
                         <li class="nav-item">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6" data-aos="fade-left">
-                        <img class="img-fluid" src="/images/profil0.jpg" alt="profil">
+                        <img class="img-fluid" src="profil.jpg" alt="profil">
                     </div>
                 </div>
             </section>
