--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </ul>
                 </nav>
                 <div class="text">
-                    <h1 class="display-1 text-capitalize" data-aos="fade-down">welcome</h1>
+                    <h1 class="display-4 display-md-1 text-capitalize" data-aos="fade-down">welcome</h1>
                     <p class="lead text-uppercase mb-4" data-aos="fade-up">i'm said aghrrabi,<br>full stack developper</p>
                     <a class="btn hover mr-2 px-3" href="#portfolio" data-aos="fade-up">Portfolio</a>
                     <a class="btn ml-2 hover px-3" href="#contact" data-aos="fade-up">Contact Me</a>
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6" data-aos="fade-right">
                         <div class="header text-center text-md-left">
-                            <h1 class="display-1 mb-0">About</h1>
+                            <h1 class="display-4 display-md-1 mb-0">About</h1>
                             <h6 class="text-center">My Self</h6>
                         </div>
                         <p class="lead text-center text-md-left">
