--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <section id="skills" class="py-5">
                 <div class="container">
-                    <h1 class="display-1">My Skills</h1> 
+                    <h1 class="display-4 display-md-1">My Skills</h1> 
                     <div class="row text-center">
                         <div class="col-12 col-md-6 col-lg-4 py-lg-5 pb-5" data-aos="fade-up">
                             <i class="fab fa-html5"></i>
@@ -145,7 +145,7 @@
 
             <section id="education">
                 <div class="container">
-                    <h1 class="display-1">Education</h1>
+                    <h1 class="display-4 display-md-1">Education</h1>
                     <div class="timeline" data-aos="fade-in">
                         <ul>
                             <li>
@@ -177,14 +177,14 @@
 
             <section id="portfolio">
                 <div class="container">
-                    <h1 class="desplay1">Portfolio</h1>
+                    <h1 class="display-4 display-md-1">Portfolio</h1>
                     <div class="row"></div>             
                 </div>
             </section>
 
             <section id="contact" class="d-flex align-items-evently">
                 <div class="container" data-aos="fade-in">
-                    <h1 class="display1">Contact Me</h1>
+                    <h1 class="display-4 display-md-1">Contact Me</h1>
                     <div class="row justify-content-center align-items-centre">
                         <img src="contact.jpg" alt="contact-img" class="img-fluid">
                         <form action="">
