--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <button type="submit" class="btn btn-lg">Send</button>
                         </form>
                     </div>
-                    <div class="contact-info text-center" data-aos="fade-down">
+                    <div class="contact-info text-center">
                         <i class="fas fa-phone-alt mr-2 mb-2"></i> +212 655-80 14 56 <br>
                         <i class="fas fa-envelope mr-2"></i> agherrabi.said@gmail.com
                     </div>
