--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="bar last"></div>
                 </div>
                 <nav class="d-flex px-lg-5 py-lg-2 fixed-top align-items-centre justify-content-center justify-content-lg-between">
-                    <a class="navbar-brand" href="saidPrtfolio.html">
+                    <a class="navbar-brand" href="index.html">
                         <img class="logo img-fluid" src="logo.png" alt="logo">
                     </a>
                     <ul class="nav-list text-center p-0">
